Fixed homepage link

--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://sossw1.github.io/directory"
+  "homepage": "https://sossw1.github.io/Directory"
 }
